--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,24 @@
-# dependencies
+# Node dependencies
 node_modules/
 
-# build output
+# Build output
 dist/
 
-# misc
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.vscode/
+.idea/
+
+# System files
 .DS_Store
+Thumbs.db
+
+# Environment variables (if added later)
+.env
+.env.local
+.env.*.local
