--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "shrecknet-lite",
+  "name": "schrecknet-lite",
   "version": "1.0.0",
   "description": "Unofficial Vampire: The Masquerade V20/V5 interactive character sheet. Fan-made project using Tailwind CSS and vanilla JavaScript.",
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"tailwindcss -i ./src/css/style.css -o ./dist/style.css --watch\" \"live-server --port=3000 --open=index.html\"",
-    "build": "tailwindcss -i ./src/css/style.css -o ./dist/style.css --minify"
+    "clean": "rm -rf public",
+    "build:css": "tailwindcss -i ./src/css/style.css -o ./public/dist/style.css --minify",
+    "copy:assets": "copyfiles -u 1 \"src/**/*.{html,js,json}\" public && copyfiles index.html public",
+    "build": "npm run clean && npm run build:css && npm run copy:assets"
   },
   "repository": {
     "type": "git",
@@ -22,6 +25,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.2.0",
+    "copyfiles": "^2.4.1",
     "live-server": "^1.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
