--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"tailwindcss -i ./src/css/style.css -o ./dist/style.css --watch\" \"live-server --port=3000 --open=index.html\"",
+    "watch:css": "tailwindcss -i ./src/css/style.css -o ./public/dist/style.css --watch",
+    "watch:html": "nodemon --watch src -e html --exec \"npm run copy:assets\"",
+    "copy:assets": "copyfiles -u 1 \"src/**/*.{html,js,json}\" public && copyfiles index.html public",
+    "serve": "live-server public/",
+    "dev": "npm run build && concurrently \"npm run serve\" \"npm run watch:css\" \"npm run watch:html\"",
     "clean": "rm -rf public",
     "build:css": "tailwindcss -i ./src/css/style.css -o ./public/dist/style.css --minify",
-    "copy:assets": "copyfiles -u 1 \"src/**/*.{html,js,json}\" public && copyfiles index.html public",
     "build": "npm run clean && npm run build:css && npm run copy:assets"
   },
   "repository": {
@@ -27,6 +30,7 @@
     "concurrently": "^9.2.0",
     "copyfiles": "^2.4.1",
     "live-server": "^1.2.0",
+    "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
   }
